--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Assistance Services</title>
+    <link rel="stylesheet" href="/src/lib/owlcarousel/assets/owl.carousel.css">
+    <link rel="stylesheet" href="/src/lib/owlcarousel/assets/owl.carousel.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,18 +43,22 @@
     -->
 
 
+        
+
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/counterup/counterup.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/isotope/isotope.pkgd.min.js"></script>
-        <script src="lib/lightbox/js/lightbox.min.js"></script>
+        <script src="/src/lib/easing/easing.min.js"></script>
+        <script src="/src/lib/waypoints/waypoints.min.js"></script>
+        <script src="/src/lib/counterup/counterup.min.js"></script>
+        <script src="/src/lib/owlcarousel/owl.carousel.min.js" type="text/javascript"></script>
+        <script src="/src/lib/owlcarousel/owl.carousel.js"></script>
+        <script src="/src/lib/isotope/isotope.pkgd.min.js"></script>
+        <script src="/src/lib/lightbox/js/lightbox.js"></script>
     
     <!-- Template de Javascript -->
-    <script src="js/main.js"></script>
+    <script src="/src/components/js/main.js"></script>
+    <script src="/src/jquery/jquery.min.js"></script>
 
 
   </body>
